--- a/frame/evm/precompile/curve25519/Cargo.toml
+++ b/frame/evm/precompile/curve25519/Cargo.toml
@@ -4,18 +4,17 @@ version = "1.0.0-dev"
 authors = ["Parity Technologies <admin@parity.io>", "Drew Stone <drew@webb.tools>"]
 edition = "2021"
 license = "Apache-2.0"
-description = "Curve25519 elliptic curve precompiles for EVM pallet."
+homepage = "https://substrate.io"
 repository = "https://github.com/paritytech/frontier/"
+description = "Curve25519 elliptic curve precompiles for EVM pallet."
 
 [dependencies]
-curve25519-dalek = { version = "4.0.0-pre.1", default-features = false, features = ["alloc", "u64_backend"] }
+curve25519-dalek = { version = "4.0.0-pre.1", default-features = false, features = ["u64_backend", "alloc"] }
 
-# Frontier
 fp-evm = { version = "3.0.0-dev", path = "../../../../primitives/evm", default-features = false }
 
 [features]
 default = ["std"]
 std = [
-	# Frontier
 	"fp-evm/std",
 ]
