--- a/frame/evm/precompile/ed25519/Cargo.toml
+++ b/frame/evm/precompile/ed25519/Cargo.toml
@@ -4,18 +4,17 @@ version = "2.0.0-dev"
 authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2021"
 license = "Apache-2.0"
-description = "ED25519 precompiles for EVM pallet."
+homepage = "https://substrate.io"
 repository = "https://github.com/paritytech/frontier/"
+description = "ED25519 precompiles for EVM pallet."
 
 [dependencies]
 ed25519-dalek = { version = "1.0.0", default-features = false, features = ["alloc", "u64_backend"] }
 
-# Frontier
 fp-evm = { version = "3.0.0-dev", path = "../../../../primitives/evm", default-features = false }
 
 [features]
 default = ["std"]
 std = [
-	# Frontier
 	"fp-evm/std",
 ]
