--- a/frame/evm/precompile/simple/Cargo.toml
+++ b/frame/evm/precompile/simple/Cargo.toml
@@ -4,16 +4,15 @@ version = "2.0.0-dev"
 authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2021"
 license = "Apache-2.0"
-description = "Simple precompiles for EVM pallet."
+homepage = "https://substrate.io"
 repository = "https://github.com/paritytech/frontier/"
+description = "Simple precompiles for EVM pallet."
 
 [dependencies]
 ripemd = { version = "0.1", default-features = false }
 
-# Substrate
 sp-io = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
 
-# Frontier
 fp-evm = { version = "3.0.0-dev", path = "../../../../primitives/evm", default-features = false }
 
 [dev-dependencies]
@@ -23,8 +22,6 @@ pallet-evm-test-vector-support = { version = "1.0.0-dev", path = "../../test-vec
 default = ["std"]
 std = [
 	"ripemd/std",
-	# Substrate
 	"sp-io/std",
-	# Frontier
 	"fp-evm/std",
 ]
