--- a/template/node/Cargo.toml
+++ b/template/node/Cargo.toml
@@ -2,10 +2,12 @@
 name = "frontier-template-node"
 version = "0.0.0"
 authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
+description = "A fresh FRAME-based Substrate node, ready for hacking."
 edition = "2021"
 license = "Unlicense"
 build = "build.rs"
-description = "A fresh FRAME-based Substrate node, ready for hacking."
+homepage = "https://substrate.io"
+repository = "https://github.com/substrate-developer-hub/frontier-node-template/"
 publish = false
 
 [package.metadata.docs.rs]
@@ -14,14 +16,12 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 async-trait = "0.1"
 clap = { version = "3.1", features = ["derive"] }
-futures = "0.3.21"
+codec = { package = "parity-scale-codec", version = "3.1", features = ["derive"] }
+futures = "0.3"
+jsonrpc-core = "18.0.0"
+jsonrpc-pubsub = "18.0.0"
 log = "0.4.17"
 
-# Parity
-codec = { package = "parity-scale-codec", version = "3.1", features = ["derive"] }
-jsonrpsee = { version = "0.13.0", features = ["server", "macros"] }
-
-# Substrate
 sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
 sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master", features = ["wasmtime"] }
 sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
@@ -58,8 +58,6 @@ frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/pari
 frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
 pallet-transaction-payment = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
 
-# Frontier
-fc-cli = { path = "../../client/cli" }
 fc-consensus = { path = "../../client/consensus" }
 fc-db = { path = "../../client/db" }
 fc-mapping-sync = { path = "../../client/mapping-sync" }
@@ -86,7 +84,7 @@ manual-seal = [
 	"sc-consensus-manual-seal",
 	"frontier-template-runtime/manual-seal",
 ]
-with-rocksdb-weights = ["frontier-template-runtime/with-rocksdb-weights"]
-with-paritydb-weights = ["frontier-template-runtime/with-paritydb-weights"]
 rpc_binary_search_estimate = ["fc-rpc/rpc_binary_search_estimate"]
-runtime-benchmarks = ["frontier-template-runtime/runtime-benchmarks"]
+runtime-benchmarks = [
+	"frontier-template-runtime/runtime-benchmarks",
+]
